# budgetto

./: .env  .env.example  .gitignore  .null-ls_814785_.env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sqlx-data.json
api/: Cargo.toml
api/app-bin/src/: main.rs
api/crates/budgetto-api/: Cargo.toml
api/crates/budgetto-api/src/: lib.rs  router.rs
api/crates/budgetto-api/src/endpoints/: account_endpoints.rs  accounts_endpoints.rs  auth_endpoints.rs  budget_endpoints.rs  categories_endpoints.rs  category_endpoints.rs  mod.rs  transaction_endpoints.rs  transactions_endpoints.rs  user_endpoints.rs  users_endpoints.rs
api/crates/budgetto-api/src/extractors/: required_authentication_extractor.rs  session_extractor.rs  user_agent_extractor.rs  validation_extractor.rs
api/crates/budgetto-api/src/middleware/: auth.rs
api/crates/budgetto-core/: Cargo.toml
api/crates/budgetto-core/src/: errors.rs  lib.rs  service.rs
api/crates/budgetto-core/src/accounts/: repository.rs  service.rs
api/crates/budgetto-core/src/budgets/: repository.rs  service.rs
api/crates/budgetto-core/src/categories/: repository.rs  service.rs
api/crates/budgetto-core/src/sessions/: repository.rs  service.rs
api/crates/budgetto-core/src/transactions/: repository.rs  service.rs
api/crates/budgetto-core/src/users/: repository.rs  service.rs
api/crates/budgetto-core/src/utils/: security_service.rs  token_service.rs
api/crates/budgetto-domain/: Cargo.toml
api/crates/budgetto-domain/src/: lib.rs
api/crates/budgetto-domain/src/accounts/: mod.rs  requests.rs
api/crates/budgetto-domain/src/budgets/: mod.rs  requests.rs  responses.rs
api/crates/budgetto-domain/src/categories/: mod.rs  requests.rs
api/crates/budgetto-domain/src/sessions/: mod.rs  requests.rs  responses.rs
api/crates/budgetto-domain/src/transactions/: mod.rs  requests.rs  responses.rs
api/crates/budgetto-domain/src/users/: mod.rs  requests.rs  responses.rs
api/crates/budgetto-domain/src/utils/: token.rs
api/crates/budgetto-infrastructure/: Cargo.toml  sqlx-data.json
api/crates/budgetto-infrastructure/migrations/: 20230417062503_accounts.sql
api/crates/budgetto-infrastructure/src/: mocks.rs  service_register.rs
api/crates/budgetto-infrastructure/src/repositories/: accounts_repository.rs  budgets_repository.rs  categories_repository.rs  mod.rs  sessions_repository.rs  transactions_repository.rs  users_repository.rs
api/crates/budgetto-infrastructure/src/services/: accounts_service.rs  budgets_service.rs  categories_service.rs  mod.rs  sessions_service.rs  transactions_service.rs  users_service.rs
api/crates/budgetto-infrastructure/src/services/utils/: jwt_utils.rs  seed_service.rs
api/crates/budgetto-infrastructure/tests/: category_service_test.rs
app-bin/: Cargo.toml
apps/api/: .env.example  Dockerfile  eslint.config.js  mikro-orm.config.ts  package.json  tsconfig.build.tsbuildinfo  tsconfig.json  turbo.json
apps/api/migrations/: Migration20250102032044.ts
apps/api/seeders/: CategorySeeder.ts  DatabaseSeeder.ts
apps/api/src/: app.module.ts  http-exception.filter.ts  main.ts  mikro-orm.config.ts  server.ts  trpc.ts
apps/web/: auth.ts  eslint.config.js  next.config.js  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  turbo.json  vite.config.ts
apps/web/src/: App.tsx  env.ts  main.tsx  sign-in-form.tsx
crates/api/: Cargo.toml
crates/api/src/: router.rs
crates/budgetto-api/: Cargo.toml
crates/budgetto-api/src/: lib.rs  router.rs
crates/budgetto-bin/: Cargo.toml
crates/budgetto-bin/src/: main.rs
crates/budgetto-core/: Cargo.toml
crates/budgetto-core/src/: errors.rs
crates/budgetto-domain/: Cargo.toml
crates/budgetto-infrastructure/: sqlx-data.json
crates/budgetto-infrastructure/migrations/: 20230417062418_init.sql  20230417062432_users.sql  20230417062436_sessions.sql  20230417062525_categories.sql
crates/budgetto-infrastructure/src/: connection_pool.rs  service_register.rs
crates/budgetto-web/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: config.rs  errors.rs  lib.rs  logger.rs
crates/core/src/accounts/: repository.rs  service.rs
crates/core/src/budgets/: repository.rs  service.rs
crates/core/src/categories/: repository.rs  service.rs
crates/core/src/sessions/: repository.rs  service.rs
crates/core/src/transactions/: repository.rs  service.rs
crates/core/src/users/: repository.rs  service.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/migrations/: 20230417062432_users.sql  20230417062503_accounts.sql  20230417062529_budget.sql  20230417062529_budgets.sql  20230417062532_transaction.sql  20230417062532_transactions.sql
crates/infrastructure/src/: service_register.rs
migrations/: 20230303155304_users.sql  20230303155330_budgets.sql  20230303155334_ledgers.sql  20230314014800_users.sql  20230321023307_budgets.sql  20230321023313_ledgers.sql  20230323025026_categories.sql  20230323025913_sessions.sql  20230323031251_expenses.sql  20230323032144_budgets.sql  20230324031041_category_budget.sql  20230324031712_category_expense.sql  20230417062432_user.sql  20230417062436_session.sql  20230417062503_account.sql  20230417062525_category.sql  20230417062529_budget.sql  20230417062532_transaction.sql
sql_queries/: get_all_ledgers.sql
src/: config.rs  lib.rs  logger.rs  main.rs  mocks.rs
src/app/: mod.rs
src/app/apis/: auth_endpoints.rs  budget_endpoints.rs  ledger_endpoints.rs  mod.rs  template.rs  users_endpoints.rs
src/core/: config.rs  database.rs  errors.rs  mod.rs
src/database/: connection.rs  mod.rs
src/middlewares/: request_validation_middleware.rs
src/repositories/: budget_repository.rs  mod.rs
src/server/: error.rs  mod.rs
tests/: categories_service.rs  users_service_login_user_should.rs  users_service_register_user_should.rs  users_service_signin_user_should.rs  users_service_signup_user_should.rs
web/: .env  package.json  pnpm-lock.yaml
web/src/: env.mjs  middleware.ts
(+211 files in other folders)
