[package]
name = "budgetto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
axum = {version="0.6.9", features=["tower-log"]}
clap = { version = "4.1.8", features = ["derive"] }
dotenv = "0.15.0"
dotenvy = "0.15.6"
log = "0.4.17"
mockall = "0.11.3"
rust-argon2 = "1.0.0"
serde = {version="1.0.152", features=["derive"]}
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "time"] }
thiserror = "1.0.38"
time = "0.3.20"
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
validator = { version = "0.16.0", features = ["derive"] }
