[workspace]
members = [
    # our runnable applications
    "crates/budgetto-bin",
    # "crates/budgetto-web",
    # our dependent library crates
    "crates/budgetto-api",
    "crates/budgetto-core",
    "crates/budgetto-domain",
    "crates/budgetto-infrastructure",
]

# [profile.release]
# debug = true
