[workspace]
members = [
    "app-bin",
    "app-core",
    # our runnable applications
    # "crates/budgetto-bin",
    # our dependent library crates
    "crates/budgetto-api",
    "crates/budgetto-core",
    "crates/budgetto-domain",
    "crates/budgetto-infrastructure",
]

# [profile.release]
# debug = true
