[workspace]
members = [
    "app-bin",
    # our runnable applications
    # "crates/budgetto-bin",
    # our dependent library crates
    "crates/budgetto-api",
    "crates/budgetto-core",
    "crates/budgetto-domain",
    "crates/budgetto-infrastructure",
]

[workspace.package]
authors = ["Brix <brixterporras@gmail.com>"]
edition = "2021"
version = "0.1.0"
repository = "https://github.com/Brix101/budgetto"


[workspace.dependencies]
budgetto-api = { path = "./crates/budgetto-api" }
budgetto-domain = { path = "./crates/budgetto-domain" }
budgetto-core = { path = "./crates/budgetto-core" }
budgetto-infrastructure = { path = "./crates/budgetto-infrastructure" }


anyhow = "1.0.70"
clap = "4.2.2"
tokio = "1.28.2"
tracing = "0.1.37"
thiserror = "1.0.40"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
