[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }

anyhow = "1.0.70"
axum = { version = "0.6.15", features = ["tower-log"] }
clap = { version = "4.2.2", features = ["derive", "env"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tracing = "0.1.37"
validator = { version = "0.16.0", features = ["derive"] }
uuid = { version = "1.3.1", features = ["serde", "v4"] }
mockall = "0.11.4"
async-trait = "0.1.68"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
backtrace = "0.3.67"
time = "0.3.20"
serde = { version = "1.0.160", features = ["derive"] }
