[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
domain = { path = "../domain" }

anyhow = "1.0.70"
async-trait = "0.1.68"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
mockall = "0.11.4"
rust-argon2 = "1.0.0"
serde = { version = "1.0.160", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "offline"] }
time = "0.3.20"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
