[package]
name = "budgetto-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
budgetto-core = { path = "../budgetto-core" }
budgetto-domain = { path = "../budgetto-domain" }
budgetto-infrastructure = { path = "../budgetto-infrastructure" }

anyhow = "1.0.70"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
validator = { version = "0.16.0", features = ["derive"] }
tower = { version = "0.4.13", features = ["timeout", "buffer", "limit"] }
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
axum = { version = "0.6.10", features = ["tower-log"] }
tokio = { version = "1.27.0", features = ["full"] }
axum-extra = { version = "0.7.3", features = ["cookie"] }
clap = "4.2.2"
http-body = "0.4.5"
lazy_static = "1.4.0"
metrics = "0.21.0"
metrics-exporter-prometheus = "0.12.0"
thiserror = "1.0.40"
tracing = "0.1.37"
uuid = { version = "1.3.1", features = ["serde", "v4"] }
async-trait = "0.1.68"
