[package]
name = "budgetto-core"
author = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
budgetto-domain = { workspace = true }

anyhow = { workspace = true }
axum = "0.6.10"
clap = { workspace = true, features = ["derive", "env"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
validator = { version = "0.16.0", features = ["derive"] }
uuid = { version = "1.3.1", features = ["serde", "v4"] }
mockall = "0.11.4"
async-trait = "0.1.68"
sqlx = { version = "0.6.3", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "time",
] }
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
backtrace = "0.3.67"
time = "0.3.20"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
