[package]
name = "budgetto-domain"
author = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
sqlx = { version = "0.6.3", features = ["time"] }
uuid = { version = "1.3.1", features = ["serde", "v4"] }
validator = { version = "0.16.0", features = ["derive"] }
