[package]
name = "budgetto-infrastructure"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
budgetto-core = { workspace = true }
budgetto-domain = { workspace = true }

anyhow = { workspace = true }
async-trait = "0.1.68"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
mockall = "0.11.4"
rust-argon2 = "1.0.0"
serde = { version = "1.0.160", features = ["derive"] }
sqlx = { version = "0.6.3", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "time",
  "offline",
] }
time = "0.3.20"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { version = "1.3.1", features = ["serde", "v4"] }
